enhance: chart generation update

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         align-items: flex-start;
         justify-content: flex-start;
         flex-direction: column;
+      }
+      .chartContainer {
         page-break-after: always;
       }
       .chart {
@@ -79,7 +81,6 @@
   </head>
   <body>
     <div class="canvasjsChart">
-      <!-- <div id="chartContainer"> -->
       <div id="measurement-chart-container">
         <!-- <div class="row">
           <div class="chartColumnName"><p></p></div>
