--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        /* transform: rotate(90deg); */
+        transform: rotate(90deg);
         border: 2px solid black;
       }
       #measurement-chart-container {
@@ -24,7 +24,7 @@
       }
       .chart {
         overflow: hidden;
-        max-height: 132px; /*92px*/
+        max-height: 264px; /*132px*/
         box-sizing: border-box;
         width: 100%;
       }
@@ -33,8 +33,8 @@
         align-items: center;
         justify-content: flex-start;
         border-top: 1px solid #000;
-        min-height: 133px; /* 1px extra for border  - 93px*/
-        max-height: 133px; /*93px*/
+        min-height: 266px; /* 1px extra for border  - 133px*/
+        max-height: 266px; /*133px*/
         box-sizing: border-box;
         overflow: hidden;
         background-color: transparent;
@@ -58,18 +58,18 @@
         border-bottom: 0;
       }
       .chartColumnName {
-        height: 132px; /*92px*/
+        height: 264px; /*132px*/
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 20px; /*20px*/
+        width: 40px; /*20px*/
         border-right: 1px solid #000;
         padding-right: 1px;
       }
       .chartColumnName p {
-        min-width: 132px; /*92px*/
-        max-width: 132px; /*92px*/
-        font-size: 9px; /*9*/
+        min-width: 264px; /*132px*/
+        max-width: 264px; /*132px*/
+        font-size: 18px; /*18*/
         margin: 0;
         transform: rotate(270deg);
         text-align: center;
