--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        transform: rotate(90deg);
+        /* transform: rotate(90deg); */
         border: 2px solid black;
       }
       #measurement-chart-container {
