fix: updated last page logic to account for insufficient parameters

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       }
       .chartContainer {
         page-break-after: always;
+        min-height: 1596px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
       }
       .chart {
         overflow: hidden;
