--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         border-top: 0;
         margin: 0;
       }
+      .row.add-top-border {
+        border-top: 1px solid #000;
+      }
       .row:last-of-type {
         border-bottom: 0;
       }
