--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         justify-content: flex-start;
         align-items: center;
         /* transform: rotate(90deg); */
-        border: 2px solid black;
+        /* border: 2px solid black; */
       }
       #measurement-chart-container {
         display: flex;
@@ -21,14 +21,16 @@
       }
       .chartContainer {
         page-break-after: always;
-        min-height: 1596px;
+        min-height: 798px; /*1596px*/
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
+        border: 2px solid black;
+        transform: rotate(90deg);
       }
       .chart {
         overflow: hidden;
-        max-height: 264px; /*132px*/
+        max-height: 132px; /*132px*/
         box-sizing: border-box;
         width: 100%;
       }
@@ -37,8 +39,8 @@
         align-items: center;
         justify-content: flex-start;
         border-top: 1px solid #000;
-        min-height: 266px; /* 1px extra for border  - 133px*/
-        max-height: 266px; /*133px*/
+        min-height: 133px; /* 1px extra for border  - 133px*/
+        max-height: 133px; /*133px*/
         box-sizing: border-box;
         overflow: hidden;
         background-color: transparent;
@@ -65,18 +67,18 @@
         border-bottom: 0;
       }
       .chartColumnName {
-        height: 264px; /*132px*/
+        height: 132px; /*132px*/
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 70px; /*35px*/
+        width: 35px; /*35px*/
         border-right: 1px solid #000;
         padding-right: 1px;
       }
       .chartColumnName p {
-        min-width: 264px; /*132px*/
-        max-width: 264px; /*132px*/
-        font-size: 18px; /*18*/
+        min-width: 132px; /*132px*/
+        max-width: 132px; /*132px*/
+        font-size: 11px; /*18*/
         margin: 0;
         transform: rotate(270deg);
         text-align: center;
