--- a/index.html
+++ b/index.html
@@ -6,29 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      .canvasjsChart {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        transform: rotate(90deg);
-        border: 2px solid black;
+      .chartContainerWrapper {
+        page-break-after: always;
       }
-      #measurement-chart-container {
+      .chartContainer {
         display: flex;
         align-items: flex-start;
         justify-content: flex-start;
         flex-direction: column;
-      }
-      .chartContainer {
-        page-break-after: always;
-        min-height: 1596px;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
+        transform: rotate(90deg) translate(0, -100%);
+        border: 2px solid black;
+        transform-origin: 0 0;
       }
       .chart {
         overflow: hidden;
-        max-height: 264px; /*132px*/
+        max-height: 131px; /*92px -> 133px*/
         box-sizing: border-box;
         width: 100%;
       }
@@ -37,8 +29,8 @@
         align-items: center;
         justify-content: flex-start;
         border-top: 1px solid #000;
-        min-height: 266px; /* 1px extra for border  - 133px*/
-        max-height: 266px; /*133px*/
+        min-height: 134px; /* 1px extra for boder  - 93px -> 134px*/
+        max-height: 134px; /*93px -> 134px*/
         box-sizing: border-box;
         overflow: hidden;
         background-color: transparent;
@@ -47,10 +39,10 @@
         background-color: rgba(220, 220, 220, 0.5);
       }
       .row:nth-of-type(odd) .canvasjs-chart-panel {
-        box-shadow: 4px 0px 0 rgba(220, 220, 220, 1);
+        box-shadow: 4px 0px 0 rgba(220, 220, 220, 0.6);
       }
       .row:nth-of-type(odd) .chartColumnName {
-        box-shadow: 2px 0px 0 rgb(220, 220, 220, 1);
+        box-shadow: 2px 0px 0 rgb(220, 220, 220, 0.6);
         position: relative;
         z-index: 1;
       }
@@ -58,25 +50,24 @@
         border-top: 0;
         margin: 0;
       }
-      .row.add-top-border {
-        border-top: 1px solid #000;
-      }
       .row:last-of-type {
         border-bottom: 0;
       }
       .chartColumnName {
-        height: 264px; /*132px*/
+        position: relative;
+        z-index: 1;
+        height: 133px; /*92px -> 133px*/
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 70px; /*35px*/
+        width: 36px; /*20px*/
         border-right: 1px solid #000;
         padding-right: 1px;
       }
       .chartColumnName p {
-        min-width: 264px; /*132px*/
-        max-width: 264px; /*132px*/
-        font-size: 18px; /*18*/
+        min-width: 133px; /*92px -> 133px*/
+        max-width: 133px; /*92px -> 133px*/
+        font-size: 12px; /*9*/
         margin: 0;
         transform: rotate(270deg);
         text-align: center;
@@ -87,42 +78,7 @@
     </style>
   </head>
   <body>
-    <div class="canvasjsChart">
-      <div id="measurement-chart-container">
-        <!-- <div class="row">
-          <div class="chartColumnName"><p></p></div>
-          <div class="chart" id="chart-1"></div>
-        </div>
-        <div class="row">
-          <div class="chartColumnName"><p></p></div>
-          <div class="chart" id="chart-2"></div>
-        </div>
-        <div class="row">
-          <div class="chartColumnName"><p></p></div>
-          <div class="chart" id="chart-3"></div>
-        </div>
-        <div class="row">
-          <div class="chartColumnName"><p></p></div>
-          <div class="chart" id="chart-4"></div>
-        </div>
-        <div class="row">
-          <div class="chartColumnName"><p></p></div>
-          <div class="chart" id="chart-5"></div>
-        </div>
-        <div class="row">
-          <div class="chartColumnName"><p></p></div>
-          <div class="chart" id="chart-6"></div>
-        </div>
-        <div class="row">
-          <div class="chartColumnName"><p></p></div>
-          <div class="chart" id="chart-7"></div>
-        </div>
-        <div class="row">
-          <div class="chartColumnName"><p>Localisation Info [m]</p></div>
-          <div class="chart" id="chart-8"></div>
-        </div> -->
-      </div>
-    </div>
+    <div id="measurement-chart-container"></div>
     <script src="canvasjs.stock.min.js"></script>
     <!-- <script src="html2canvas.min.js"></script> -->
     <script src="index.js"></script>
