--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
         transform-origin: 0 0;
       }
       .chart {
-        overflow: hidden;
         max-height: calc(calc(1072px / 6) - 3px); /*131px -> 175px*/
         box-sizing: border-box;
         width: 100%;
       }
       .row {
         display: flex;
-        align-items: center;
         justify-content: flex-start;
         border-top: 1px solid #000;
         min-height: calc(1072px / 6); /* 1px extra for boder  - 134 -> 178px*/
@@ -36,13 +34,13 @@
         background-color: transparent;
       }
       .row:nth-of-type(odd) {
-        background-color: rgba(220, 220, 220, 0.5);
+        background-color: #efefef;
       }
       .row:nth-of-type(odd) .canvasjs-chart-panel {
-        box-shadow: 4px 0px 0 rgba(220, 220, 220, 0.6);
+        box-shadow: 4px 0px 0 #efefef;
       }
       .row:nth-of-type(odd) .chartColumnName {
-        box-shadow: 2px 0px 0 rgb(220, 220, 220, 0.6);
+        box-shadow: 2px 0px 0 #efefef;
         position: relative;
         z-index: 1;
       }
