fix: localization line changes pattern

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
       .row.row-continuous.speed-zone .chart {
         transform: translate(0, -100px);
       }
+      .row.row-continuous.localization-label .chart {
+        transform: translate(0, 0);
+      }
       .row:not(:first-of-type):not(.row-continuous) .chartColumnName:after {
         content: "";
         display: block;
