fix: added ellipsis for long column names

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
         margin: 0;
         transform: rotate(270deg);
         text-align: center;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
       }
       .canvasjs-chart-panel {
         top: 0 !important;
